Refactor UI button properties and clean up code
- Updated button foreground color for 'Excluir' button in MainApp.
- Removed commented-out code regarding duplicate enrollment handling in DatabaseSeeder.
- Cleaned up event handling comments in LoginView.